--- a/Ch 01. Arrays and Strings/Ch 01. Arrays and Strings.csproj
+++ b/Ch 01. Arrays and Strings/Ch 01. Arrays and Strings.csproj
@@ -33,8 +33,8 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="nunit.framework, Version=3.2.0.0, Culture=neutral, PublicKeyToken=2638cd05610744eb, processorArchitecture=MSIL">
-      <HintPath>..\packages\NUnit.3.2.0\lib\net45\nunit.framework.dll</HintPath>
+    <Reference Include="nunit.framework, Version=3.0.5813.39031, Culture=neutral, PublicKeyToken=2638cd05610744eb, processorArchitecture=MSIL">
+      <HintPath>..\packages\NUnit.3.0.1\lib\net45\nunit.framework.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="System" />
@@ -47,14 +47,18 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="02.CheckPermutation.cs" />
+    <Compile Include="04.Palindrome_Permutation.cs" />
+    <Compile Include="03.URLify.cs" />
     <Compile Include="AreAnagrams.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RemoveDuplicate.cs" />
     <Compile Include="ReverseString.cs" />
-    <Compile Include="UniqueChar.cs" />
+    <Compile Include="01.UniqueChar.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="06.StringCompression.cs" />
     <None Include="App.config" />
     <None Include="packages.config" />
   </ItemGroup>
