--- a/Ch 01. Arrays and Strings/Ch 01. Arrays and Strings.csproj
+++ b/Ch 01. Arrays and Strings/Ch 01. Arrays and Strings.csproj
@@ -5,7 +5,7 @@
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{36A745FA-4257-469E-8FE7-72A1B0F5177B}</ProjectGuid>
-    <OutputType>Exe</OutputType>
+    <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>ArraysAndStrings</RootNamespace>
     <AssemblyName>ArraysAndStrings</AssemblyName>
@@ -32,9 +32,12 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
+  <PropertyGroup>
+    <StartupObject />
+  </PropertyGroup>
   <ItemGroup>
-    <Reference Include="nunit.framework, Version=3.0.5813.39031, Culture=neutral, PublicKeyToken=2638cd05610744eb, processorArchitecture=MSIL">
-      <HintPath>..\packages\NUnit.3.0.1\lib\net45\nunit.framework.dll</HintPath>
+    <Reference Include="nunit.framework, Version=3.2.0.0, Culture=neutral, PublicKeyToken=2638cd05610744eb, processorArchitecture=MSIL">
+      <HintPath>..\packages\NUnit.3.2.0\lib\net45\nunit.framework.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="System" />
@@ -48,17 +51,20 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="02.CheckPermutation.cs" />
-    <Compile Include="04.Palindrome_Permutation.cs" />
+    <Compile Include="04.PalindromePermutation.cs" />
     <Compile Include="03.URLify.cs" />
+    <Compile Include="09.StringRotation.cs" />
+    <Compile Include="08.ZeroMatrix.cs" />
     <Compile Include="AreAnagrams.cs" />
-    <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RemoveDuplicate.cs" />
-    <Compile Include="ReverseString.cs" />
+    <Compile Include="10.ReverseString.cs" />
     <Compile Include="01.UniqueChar.cs" />
+    <Compile Include="07.RotateMatrix.cs" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="06.StringCompression.cs" />
+    <Compile Include="05.OneAways.cs" />
     <None Include="App.config" />
     <None Include="packages.config" />
   </ItemGroup>
