--- a/Ch 04. Trees and Graphs/Ch 04. Trees and Graphs.csproj
+++ b/Ch 04. Trees and Graphs/Ch 04. Trees and Graphs.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{767427C2-9F31-46EA-94A2-38E1CFB1E12C}</ProjectGuid>
+    <ProjectGuid>{20ED6760-9391-42CE-A2E7-D5EA505A5FF7}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Ch_02.Linked_Lists</RootNamespace>
-    <AssemblyName>Ch_02.Linked_Lists</AssemblyName>
+    <RootNamespace>Ch_04.Trees_and_Graphs</RootNamespace>
+    <AssemblyName>Ch_04.Trees_and_Graphs</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -30,10 +30,6 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="nunit.framework, Version=3.2.0.0, Culture=neutral, PublicKeyToken=2638cd05610744eb, processorArchitecture=MSIL">
-      <HintPath>..\packages\NUnit.3.2.0\lib\net45\nunit.framework.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -44,18 +40,19 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="04.Partition.cs" />
-    <Compile Include="03.DeleteMiddleNode.cs" />
-    <Compile Include="02.KthToLast.cs" />
-    <Compile Include="01.RemoveDuplicates.cs" />
-    <Compile Include="05.SumLists.cs" />
-    <Compile Include="07.Intersection.cs" />
-    <Compile Include="08.LoopDetection.cs" />
+    <Compile Include="01.RouteBetweenNodes.cs" />
+    <Compile Include="02.MinimalTree.cs" />
+    <Compile Include="03.ListOfDepths.cs" />
+    <Compile Include="04.CheckBalanced.cs" />
+    <Compile Include="05.ValidateBST.cs" />
+    <Compile Include="06.Successor.cs" />
+    <Compile Include="07.BuildOrder.cs" />
+    <Compile Include="08.FirstCommonAncestor.cs" />
+    <Compile Include="10.CheckSubtree.cs" />
+    <Compile Include="11.RandomNode.cs" />
+    <Compile Include="12.PathsWithSum.cs" />
+    <Compile Include="09.BSTSequences.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <Compile Include="06.Palindrome.cs" />
-    <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
